cmake_minimum_required(VERSION 3.5.0)
project(test VERSION 0.1.0 LANGUAGES C CXX)
file(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_executable(radp_test main.cpp)
add_library(radp SHARED ${SRC})
include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
target_link_libraries(radp_test radp)
target_include_directories(radp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(radp_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
include(CPack)
